Finished Mortgage Website and Javascript code

--- a/mortgage.html
+++ b/mortgage.html
@@ -43,15 +43,15 @@
         <div class="row">
           <div>
             <p class= "pb-4 mb-2 mt-5"> Mortgage Amount:</p>
-            <input type="text" id="number1Field" />
+            <input type="text" id="mortgageAmount" />
        </div>
        <div>
            <p class= "pb-4 mb-2 mt-5"> Interest Rate:</p>
-           <p><input type="text" id="number2Field">%</p>
+           <p><input type="text" id="interestRate">%</p>
        </div>
        <div>
         <p class= "pb-4 mb-2 mt-5"> Amount of Year on Loan:</p>
-        <input type="text" id="number3Field" />
+        <input type="text" id="loanYear" />
        </div>
        
        <div style="padding-top:2em; padding-bottom:2em">
@@ -59,10 +59,10 @@
     </div>
 
     <div>
+      <p>Monthly Payment for Loan: <input type="text" id="monthlyLoan" readonly /></p>
 
-      <p>Answer: <input type="text" id="answerField" /></p>
-
-  </div>
+      <p>Your Loan Total Cost: <input type="text" id="interestPaid" readonly /></p>
+    </div>
 
         </div>
       </div>
