--- a/compoundinterest.html
+++ b/compoundinterest.html
@@ -35,9 +35,32 @@
             </div>
         </div>
       
+    </div>
+    <main>
+    <div class="container">
+      <div class="row">
+        <div>
+          <p class= "pb-4 mb-2 mt-5"> Deposit Amount:</p>
+          <p>$<input type="text" id="intialAmount" /></p>
+     </div>
+     <div>
+        <p class= "pb-4 mb-2 mt-5"> CD term length:</p>
+        <input type="text" id="cdYear" />
+    </div>
+     <div>
+         <p class= "pb-4 mb-2 mt-5">Annual Percentage Yield:</p>
+         <p><input type="text" id="apyRate">%</p>
+     </div>
+     
+     <div style="padding-top:2em; padding-bottom:2em">
+      <input type="button" id="calBtn" value="Calculate">
+  </div>
 
+  <div>
+    <p>Total Amount: <input type="text" id="totalAmount" readonly /></p>
 
-
+    <p>Interest Gained: <input type="text" id="interestGained" readonly /></p>
+  </div>
 
     </div>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
